--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -7,27 +7,22 @@
 <div id="content" class="tabcontent">
     <h3>Content</h3>
     <p>
-       Poker is a turn based game. There are stages of play that come in an order. That is:
-       the pre-flop, flop, post-flop, turn, post turn, the river then the final round of betting.
-       In all these stages of play there is either action of betting, or cards being laid onto the table.
-       Here is what post-flop looks like for example:
+        Poker is a turn based game. There are stages of play that come in an order. That is: the pre-flop, flop, post-flop, turn, post turn, the river then the final round of betting. In all these stages of play there is either action of betting, or cards being
+        laid onto the table. Here is what post-flop looks like for example:
     </p>
-    <img src = "..."> <!-- image of postflop or some other round-->
+    <img src="...">
+    <!-- image of postflop or some other round-->
     <p>
-        Players make actions during these betting phases. Players can fold, bet, raise or check.
-        A fold means the player forfeits the round, places their cards out of their hand and sits out.
-        A bet means the player is placing a bet into the community pot of chips.
-        A raise means the player is increasing the minimum bet size with their own bet.
-        A check is when the player does not bet further as they have already put in an amount that satisfies the current bet.
+        Players make actions during these betting phases. Players can fold, bet, raise or check. A fold means the player forfeits the round, places their cards out of their hand and sits out. A bet means the player is placing a bet into the community pot of chips.
+        A raise means the player is increasing the minimum bet size with their own bet. A check is when the player does not bet further as they have already put in an amount that satisfies the current bet.
     </p>
-    <img src ="..."><!-- relevant image-->
+    <img src="...">
+    <!-- relevant image-->
     <p>
-        Cards come down onto the table in three stages; the flop, the turn and the river. 
-        On the flop, three cards come down, face up after one has been discarded from the deck.
-        On the turn, a fourth card is placed on the table after one has been discarded. 
-        The last card called the river is placed on the table on the penultimate stage of play.
+        Cards come down onto the table in three stages; the flop, the turn and the river. On the flop, three cards come down, face up after one has been discarded from the deck. On the turn, a fourth card is placed on the table after one has been discarded. The
+        last card called the river is placed on the table on the penultimate stage of play.
     </p>
-    <img src = "https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png">
+    <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png">
 </div>
 <div id="quiz" class="tabcontent">
     <h3>Quiz 1</h3>
@@ -99,6 +94,8 @@
         {{ quiz_form.submit }}
     </form>
 </div>
+
+
 {% endblock %}{% block script %}
 
 <script src="{{url_for('static', filename='js/lesson1.js') }}"></script> {%endblock%}
