--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -85,6 +85,11 @@ footer{
     max-width: 960px;
 }
 
+.container-big{
+        max-width:1080px;
+        max-height: 800px;
+}
+
 
 /*
    * Dummy devices (replace them with your own or something else entirely!)
