--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -3,7 +3,7 @@
 <h1>User: {{ user.username }}</h1>
 <hr> {% for post in posts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
-
+<script src="{{url_for('static', filename='Charts.js') }}"></script>
 <p>
     {{ post.author.username }} Your Results: 
 </p>
@@ -14,92 +14,98 @@
     <canvas id="barChart"width="400" height="100" ></canvas>
 </div>
 
-
 <script>
-var ctx = document.getElementById('myChart');
-var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
-        datasets: [{
-            label: '% Correct ',
-            data: [12, 19, 3, 5, 2, 3],
+  var ctx = document.getElementById('myChart');
+  var myChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+          labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
+          datasets: [{
+              label: 'Your % Correct ',
+              data: [12, 19, 3, 5], 
+              backgroundColor: [
+                  'rgba(255, 99, 132, 0.2)',
+                  'rgba(54, 162, 235, 0.2)',
+                  'rgba(255, 206, 86, 0.2)',
+                  'rgba(75, 192, 192, 0.2)'
+              ],
+              borderColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)'
+              ],
+              borderWidth: 1
+              
+          }, {
+            label: 'Site Average % Correct',
+            data: [29, 39, 49, 58],
             backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-    animations: {
-      tension: {
-        duration: 1000,
-        easing: 'linear',
-        from: 1,
-        to: 0,
-        loop: true
-      }
-    },
-    scales: {
-      y: { // defining min and max so hiding the dataset does not change scale range
-        min: 0,
-        max: 100
+                  'rgba(255, 99, 132, 0.2)',
+                  'rgba(54, 162, 235, 0.2)',
+                  'rgba(255, 206, 86, 0.2)',
+                  'rgba(75, 192, 192, 0.2)'
+              ],
+              borderColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)'
+              ],
+              borderWidth: 1
+          }
+        ]
+  
+          
+      },
+      options: {
+       scales: {
+        y: { // defining min and max so hiding the dataset does not change scale range
+          min: 0,
+          max: 100
+        }
       }
     }
-  }
-});
-
-var atx = document.getElementById('barChart');
-var barChart = new Chart(atx, {
-    type: 'bar',
-    data: {
-        labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
-        datasets: [{
-            label: '% Correct ',
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-    animations: {
-      tension: {
-        duration: 1000,
-        easing: 'linear',
-        from: 1,
-        to: 0,
-        loop: true
-      }
-    },
-    scales: {
-      y: { // defining min and max so hiding the dataset does not change scale range
-        min: 0,
-        max: 100
+  });
+  
+  var atx = document.getElementById('barChart');
+  var barChart = new Chart(atx, {
+      type: 'bar',
+      data: {
+          labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
+          datasets: [{
+              label: 'Site Average Results',
+              data: [12, 19, 3, 5, 2, 3],
+              backgroundColor: [
+                  'rgba(255, 99, 132, 0.2)',
+                  'rgba(54, 162, 235, 0.2)',
+                  'rgba(255, 206, 86, 0.2)',
+                  'rgba(75, 192, 192, 0.2)'
+              ],
+              borderColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)'
+              ],
+              borderWidth: 1
+          }]
+      },
+      options: {
+      animations: {
+        tension: {
+          duration: 1000,
+          easing: 'easeInOutQuint'
+        }
+      },
+      scales: {
+        y: { // defining min and max so hiding the dataset does not change scale range
+          min: 0,
+          max: 100
+        }
       }
     }
-  }
-});
-</script>
+  });
+  </script>
 
-<script type="text/javascript" src="{{url_for('static', filename='../js/Charts.js') }}"></script>
 {% endfor %} {% endblock %}
